--- a/streamlit/requirements.txt
+++ b/streamlit/requirements.txt
@@ -1,5 +1,5 @@
-streamlit
-numpy
-joblib
-scikit-learn
-requests
+streamlit==1.28.0
+numpy==1.26.1
+joblib==1.3.2
+scikit-learn==1.2.2
+requests==2.31.0
